--- a/client/src/assets/css/public.less
+++ b/client/src/assets/css/public.less
@@ -89,12 +89,20 @@
   font-weight: bold;
 }
 
+.f400 {
+  font-weight: 400;
+}
+
 .f500 {
   font-weight: 500;
 }
 
 .f600 {
   font-weight: 600;
+}
+
+.f700 {
+  font-weight: 700;
 }
 
 .inline {
@@ -182,6 +190,10 @@
 
 .flexcenterX {
   justify-content: center;
+}
+
+.flexbetweenX {
+  justify-content: space-between;
 }
 
 .aiCenter {
