客户端-修改路由，完成通用布局以及文章类别板块

--- a/client/src/assets/css/public.less
+++ b/client/src/assets/css/public.less
@@ -382,3 +382,20 @@
     }
   }
 }
+
+.searchBtns {
+  background: none;
+  border: none;
+  color: @primary-color;
+  font-size: 14px;
+  box-shadow: none;
+  padding: 0;
+  &:not(:last-child) {
+    margin-right: 20px;
+  }
+  &:hover, &:focus {
+    color: @primary-color;
+    background: none;
+    border-color: none;
+  }
+}
