--- a/client/src/layout/css/Home.module.less
+++ b/client/src/layout/css/Home.module.less
@@ -3,7 +3,7 @@
   :global {
     .ant-layout-content {
       background-color: #e3f2fd;
-      padding: 15px;
+      padding: 15px 10px;
     }
   }
 }
