--- a/client/src/layout/css/SideNav.module.less
+++ b/client/src/layout/css/SideNav.module.less
@@ -1,7 +1,7 @@
 .sideNav {
   :global {
     .ant-menu {
-      height: 100vh;
+      // height: 100vh;
 
       .ant-menu-sub {
         padding-left: 20px;
