--- a/client/src/views/dashboard/css/index.module.less
+++ b/client/src/views/dashboard/css/index.module.less
@@ -11,16 +11,6 @@
       }
     }
 
-    .mainContent {
-      #leftChart {
-        width: 65%;
-        height: 400px;
-      }
-
-      #rightChart {
-        flex: 1;
-        height: 400px;
-      }
-    }
+    .mainContent {}
   }
 }
