客户端-完成修改资料、头像、密码等功能

--- a/client/src/views/article/css/index.module.less
+++ b/client/src/views/article/css/index.module.less
@@ -1,5 +1,10 @@
 .articleBox {
   :global {
+    .list {
+      max-height: 610px;
+      overflow-y: auto;
+    }
+
     .reset {
 
       &:hover,
