--- a/client/src/views/dashboard/css/index.module.less
+++ b/client/src/views/dashboard/css/index.module.less
@@ -1,5 +1,9 @@
 .dashboardBox {
   :global {
+    .ant-spin-nested-loading>div>.ant-spin {
+      max-height: none;
+    }
+
     .headData {
       .contentBox {
         background-color: #fff;
